Fix ads on mobile

--- a/app/css/dashboard.css
+++ b/app/css/dashboard.css
@@ -36,8 +36,12 @@ button{
 @media  (max-width: 700px) {  
   .adsbygoogle{
     position: initial;
-    padding-top:10px;
+    margin-top:35px;
+    min-height: 80px;
   }
+  .top-padding {
+  padding-top: 5px;
+}
 
   .draw-number{
     font-size:2.5em;
